# SLAMandDoorDetectionProject

./: README.md
src/door_detector/: CMakeLists.txt  README.md  package.xml  setup.py
src/door_detector/launch/: door_detector.launch
src/door_detector/msg/: BoundingBox.msg
src/door_detector/src/detector/: detect_image.py  requirements.txt  yolo.py  yolo_image.py  yolo_video.py
src/door_detector/src/detector/yolo3/: utils.py
src/door_position/: CMakeLists.txt  README.md  package.xml  setup.py
src/door_position/mock_data/: closed_doordetection-20190715-234839.txt  measurements.md  open_door_frontdetection-20190715-235000.txt  open_door_sidedetection-20190715-235032.txt
src/door_position/msg/: Door.msg  DoorList.msg  DoorPose.msg
src/door_position/src/door_pose_calculation/: door_pose_calculation.py  test.py
src/fancy_scan/: CMakeLists.txt  instructions  package.xml
src/fancy_scan/src/: fancy_scan_code.cpp
src/iai_kinect2/kinect2_bridge/data/001892163147/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
src/mapping_with_rtabmap/: instructions
src/mapping_with_rtabmap/kinect/kinect/config/: frames.gv  mapping.rviz  rviz2.rviz
src/mapping_with_rtabmap/kinect/kinect/launch/: .pioneer_robot_rtabmap.launch.swp  DONOTDELETE_old_ekf_setup.txt  pioneer_robot_rtabmap.launch  pioneer_robot_rtabmap.launch.save  pioneer_sim_rtabmap.launch
src/mapping_with_rtabmap/kinect/kinect/launch/include/: move_base.launch.xml
src/mapping_with_rtabmap/kinect/kinect/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  ekf_params.yaml  exploration.yaml  exploration2.yaml  local_costmap_params.yaml  move_base_params.yaml  my_laser_config.yaml
src/mapping_with_rtabmap/kinect/kinect/urdf/: p3dx_kinect.xacro  p3dx_real.xacro
src/mapping_with_rtabmap/kinect/kinect/worlds/: my_world.world
src/mapping_with_rtabmap/models/corridor/: corridor.sdf  model.config
src/mapping_with_rtabmap/models/corridor/materials/scripts/: wall0.material  wall1.material  wall2.material  wall3.material  wall4.material
src/mapping_with_rtabmap/ua_ros_p3dx/p3dx_control/config/: pioneer3dx.yaml
src/mapping_with_rtabmap/ua_ros_p3dx/p3dx_control/launch/: control.launch
src/mapping_with_rtabmap/ua_ros_p3dx/p3dx_description/urdf/: pioneer3dx.gazebo  pioneer3dx.xacro  pioneer3dx.xml  pioneer3dx_wheel.xacro
src/mission_planner/: CMakeLists.txt  package.xml
src/mission_planner/src/: send_nav_goals.py
src/pcl_filter/: CMakeLists.txt  README.md  package.xml
src/pcl_filter/src/: laserscanfilter.cpp  voxelgrid.cpp
src/reporter/: CMakeLists.txt  package.xml  setup.py
src/reporter/launch/: reporter.launch
src/reporter/src/helpers/: helpers.py
src/ros_tinkerforge_sensors/: CMakeLists.txt  LICENSE  README.md  package.xml
src/ros_tinkerforge_sensors/include/: sensor_device.h  tinkerforge_sensors_core.h
src/ros_tinkerforge_sensors/launch/: tinkerforge_sensors.launch
src/ros_tinkerforge_sensors/src/: sensor_device.cpp  tinkerforge_sensors_core.cpp  tinkerforge_sensors_node.cpp  tinkerforge_sensors_node_backup.cpp
src/rosaria/: RosAria.cpp
src/rosaria/cfg/: RosAria.cfg
src/webserver/: CMakeLists.txt  README.md  package.xml  setup.py
src/webserver/src/webview/: .gitignore  README.md
src/webserver/src/webview/backend/: SendImage.py  backend.py  requirements.txt
src/webserver/src/webview/backend/static/: index.html
src/webserver/src/webview/backend/static/css/: 772adaa4.e8bbda8a.css  app.e62efc17.css
src/webserver/src/webview/backend/static/js/: 2d0e9741.d2b32c1a.js  772adaa4.3a6cadf6.js  app.07bfddbe.js  runtime.66bdcd6a.js  vendor.939d0113.js
src/webserver/src/webview/frontend/: README.md  package-lock.json  package.json  quasar.conf.js
src/webserver/src/webview/frontend/src/components/: Detection.vue  DoorList.vue  Map.vue
src/webserver/src/webview/frontend/src/css/: quasar.variables.styl
src/webserver/src/webview/frontend/src/layouts/: Main.vue
src/webserver/src/webview/frontend/src/pages/: Index.vue
src/webserver/src/webview/frontend/src/router/: routes.js
