<package format="2">
  <name>door_detector</name>
  <version>0.0.1</version>
  <description>
    Subscribes to IAI_Kinect images, runs classification on that and publishes the results to rostopic benstiller/door_detector.
  </description>
  <author>Christian Reichel</author>
  <maintainer email="c.reichel@me.com">Christian Reichel</maintainer>
  <license>BSD</license>
  <url>https://git.informatik.uni-hamburg.de/cv-master-2018/door_detector</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
</package>